Fix vertical alignment issue

--- a/src/scss/appbar.scss
+++ b/src/scss/appbar.scss
@@ -5,7 +5,7 @@
 .appbar {
   width: 100%;
   height: 65px;
-  line-height: 60px;
+  line-height: 65px;
   overflow: hidden;
   color: #000;
   &.fixed,
@@ -56,7 +56,7 @@
           text-indent: 20px;
           line-height: 35px;
           position: relative;
-          top: -5px;
+          top: -7px;
         }
         > input {
           width: 60px;
